--- a/about.html
+++ b/about.html
@@ -71,12 +71,13 @@
                     <div class="col-md-6">
                         <div class="card" id="contactaddr">
                             <div class="card-body">
-                                <h2 class="card-title ">ABOUT US</h2>
+                                <h2 class="card-title fw-bolder">ABOUT US</h2>
                                 <hr>
                                 <!-- ------------------------------------------------- -->
 
                                 <!-- ------------------------------------------------- -->
-                                <p>&nbsp;&nbsp; We already are a professional production house, RZ Taem Production,
+                                <p class="p-4" style="text-align: justify;">&nbsp;&nbsp; We already are a professional
+                                    production house, RZ Taem Production,
                                     working
                                     in
                                     advertisement and commercials since 2016 and have earned a great presence in market
@@ -114,9 +115,10 @@
                     <div class="col-md-6">
                         <div class="card" id="contactaddr">
                             <div class="card-body">
-                                <h2 class="card-title ">VISION</h2>
+                                <h2 class="card-title fw-bolder">VISION</h2>
                                 <hr>
-                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore consectetur ad error
+                                <P class="p-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Dolore consectetur ad error
                                     quas
                                     sint
                                     eum repudiandae eos at fugiat, architecto, accusantium earum aspernatur minus id
@@ -127,9 +129,10 @@
                                     dolores. Sed aliquid fugiat necessitatibus nihil id assumenda ducimus vitae laborum
                                     ipsum
                                     expedita veniam, ex, optio harum, beatae maxime? Eaque, sit.</P>
-                                <h2 class="card-title ">MISSION</h2>
+                                <h2 class="card-title fw-bolder">MISSION</h2>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quos sed saepe quia
+                                <p class="p-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Nobis quos sed saepe quia
                                     ratione
                                     quaerat cum quidem. Officia tempore sunt dolore corporis eos aperiam mollitia
                                     voluptates
@@ -153,7 +156,7 @@
         <!-- footer finished -->
     </div>
 
-        <script src="bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 
 </html>
