--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.min.css">
     <style>
-        
+
 
     </style>
     <title>BlueOrbit</title>
@@ -18,7 +18,15 @@
 <body>
     <!-- ===============================START MENU======================================= -->
 
-    <div class="outer">
+    <div class="outer" id="outer">
+        <div class="whatsapp">
+            <a href=" https://wa.me/8826562862">
+                <i class="fa fa-whatsapp"></i>
+            </a>
+        </div>
+        <div class="top">
+            <a href=""><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
+        </div>
         <header>
             <nav class="navbar navbar-expand-md  navbar-dark fixed-top">
                 <div class="container-fluid">
@@ -130,7 +138,7 @@
                     decided to come forth in professional education under our sister concern "Blue Orbit Animation".
                     <br>
                     <button class="btn btn-outline-light">READ MORE ...</button>
-                   
+
 
                 </p>
             </div>
@@ -203,7 +211,7 @@
                         <p>Lorem, ipsum dolor.</p>
                     </div>
                 </div>
-                <div class="container d-flex justify-content-end ">
+                <div class="container d-flex justify-content-sm-center ">
                     <button class="btn btn-outline-light">READ MORE ...</button>
                 </div>
             </div>
@@ -247,7 +255,8 @@
         <!-- gallery finished -->
         <!-- footer start -->
         <div class="footer">
-        <p class="text-center text-white-50 fs-5 p-3"> &reg;   all right reserved. &copy;copyright 2012-22 designed by Blue Orbit Animation. $developed by Er. Akash</p>
+            <p class="text-center text-white-50 fs-5 p-3"> &reg; all right reserved. &copy;copyright 2012-22 designed by
+                Blue Orbit Animation. $developed by Er. Akash</p>
         </div>
         <!-- footer finished -->
 
